--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body{
   height: 100vh;
 }
 .Main{
-  background: whitesmoke;
+  background: #f5f5f5;
   border-radius: 0.5rem;
   padding: 1.5rem;
   display: flex;
