--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,12 @@ body{
 
 .App{
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
+  justify-content: space-around;
+  position: relative;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 .Main{
   background: #f5f5f5;
@@ -81,9 +84,40 @@ body{
 
 
 .won{
-  font-size: 2rem;
-  color: black;
+  font-size: clamp(1rem, 2.5vw, 2rem);
+  color: #f5f5f5;
+  margin-bottom: 2rem;
   font-style: italic;
+  text-align: center;
+}
+
+
+.list{
+  list-style-type: none;
+  text-align: center;
+}
+
+.view{
+  padding: 0.5rem;
+  outline: none;
+  border: none;
+  color: #01011f;
+  font-weight: bold;
+  border-top-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-top: 1rem;
+}
+
+.hide{
+  display: none;
+}
+
+.scores{
+  margin-top: 1rem;
+  background: #f5f5f5;
+  padding: 1rem;
+  text-align: center;
+  margin-bottom: 5%;
 }
 
 
@@ -101,6 +135,7 @@ body{
     font-size:1rem;
   }
 }
+
 
 @media screen and (max-width:420px) {
 .Main{
