--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,7 @@ body{
   border-top-left-radius: 5px;
   border-bottom-right-radius: 5px;
   margin-top: 1rem;
+  cursor: pointer;
 }
 
 .hide{
@@ -118,6 +119,17 @@ body{
   padding: 1rem;
   text-align: center;
   margin-bottom: 5%;
+}
+
+.clear{
+  background: rgb(152, 39, 39);
+  color: #f5f5f5;
+  border: none;
+  outline: none;
+  padding: 0.3rem;
+  margin-top: 2rem;
+  cursor: pointer;
+  border-radius: 10px;
 }
 
 
